--- a/languages/zndskwoo-en_US.po
+++ b/languages/zndskwoo-en_US.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Zendesk Woocommerce Order Sync 1.0.0\n"
-"POT-Creation-Date: 2019-09-02 15:23+0530\n"
-"PO-Revision-Date: 2019-09-02 15:27+0530\n"
+"Project-Id-Version: MWB Zendesk Woo Order Sync 1.0.0\n"
+"POT-Creation-Date: 2019-09-03 16:57+0530\n"
+"PO-Revision-Date: 2019-09-03 16:57+0530\n"
 "Last-Translator: \n"
 "Language-Team: makewebbetter\n"
-"Language: en_US\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.6\n"
-"X-Poedit-Basepath: "./n"
-"content/plugins/zendesk-woocommerce-order-sync\n"
+"X-Poedit-Basepath: ../../Documents/git plugin/Zendesk-Woocommerce-Order-"
+"Sync\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;esc_html_e\n"
@@ -21,7 +21,7 @@ msgstr ""
 msgid "No orders found"
 msgstr ""
 
-#: zendesk-woocommerce-order-sync.php:123
+#: mwb-zendesk-woo-order-sync.php:123
 msgid ""
 "Woocommerce is not activated, please activate woocommerce first to install "
 "and use zendesk woocommerce plugin."
