--- a/languages/zndskwoo-en_US.po
+++ b/languages/zndskwoo-en_US.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MWB-Zendesk-Woo-Order-Sync1.0.1\n"
-"POT-Creation-Date: 2019-09-24 16:44+0530\n"
-"PO-Revision-Date: 2019-09-24 16:44+0530\n"
+"POT-Creation-Date: 2019-09-25 12:28+0530\n"
+"PO-Revision-Date: 2019-09-25 12:28+0530\n"
 "Last-Translator: \n"
-"Language-Team: MakeWebBetter\n"
+"Language-Team: makewebbetter\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13,7 +13,7 @@ msgstr ""
 "X-Poedit-Basepath: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;esc_html_e\n"
+"X-Poedit-KeywordsList: __;esc_html_e;_e\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: Library/class-mwb-zendesk-manager.php:182
